# PyFourier

./: .gitignore  LICENSE  README.md  setup.cfg
src/PyFourier/: fourier1D.py
src/PyFourier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PyFourier/fourier1D/: fourier1D.py
