[metadata]
name = PyFourier
version = 0.0.1
author = Sergio Lopez Banos
author_email = sergioloba98@gmail.com
description = 'A module for visualizing Fourier transform and its properties'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LopezBanos/PyFourier
project_urls =
    Bug Tracker = https://github.com/LopezBanos/PyFourier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
